hermes_fuzz_executed_few_shot_v3/fuzz_82_execution
'use strict';
<fim_middle>for (var _len8 = arguments.length, args = Array(_len8), _key8 = 0; _key8 < _len8; _key8++) {
  args[_key8] = arguments[_key8];
}
 
'use strict';
for (var _len9 = arguments.length, args = Array(_len9), _key9 = 0; _key9 < _len9; _key9++) {
  args[_key9] = arguments[_key9];
}
'use strict';
for (var _len10 = arguments.length, args = Array(_len10), _key10 = 0; _key10 < _len10; _key10++) {
  args[_key10] = arguments[_key10];
}
'use strict';
for (var _len11 = arguments.length, args = Array(_len11), _key11 = 0; _key11 < _len11; _key11++) {
  args[_key11] = arguments[_key11];
}
 

Execution Output ------------------:
test.js:2:1: error: invalid expression (possible JSX: pass -parse-jsx to parse)
<fim_middle>for (var _len8 = arguments.length, args = Array(_len8), _key8 = 0; _key8 < _len8; _key8++) {
^
